Bug #31848: Test failure: Cluster has problems on insert with auto-increment

Fix uninitialized variable causing failures for some interpreted update
operations on gcc 4.2.1.